<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="1"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="2"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="3"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="4"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="5"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="6"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="7"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="8"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="9"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:background="@drawable/new_but"
        android:paddingRight="95sp"
        android:text="0"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

    <Button
        android:id="@+id/btn_equal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/arithmatic_button"
        android:text="="
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <Button
        android:id="@+id/btn_multi"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/arithmatic_button"
        android:text="×"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/arithmatic_button"
        android:text="/"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/arithmatic_button"
        android:text="+"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/arithmatic_button"
        android:text="-"
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button"
        android:text="AC"
        android:textColor="#060606"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <Button
        android:id="@+id/btn_mod"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button"
        android:text="%"
        android:textColor="#060606"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <Button
        android:id="@+id/button_pl_minus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button"
        android:text="+/-"
        android:textColor="#060606"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="."
        android:textColor="#ffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_light"
        android:textSize="68sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

</androidx.constraintlayout.widget.ConstraintLayout>